bin_PROGRAMS = cw cwassembler cwdesassembler

cwassembler_SOURCES = 	./assembleur/assembleur_main.c \
						./assembleur/assembleur.c \
						./assembleur/assembleur.h \
						./general.h \
						./verificateur.c \
						./verificateur.h

cwdesassembler_SOURCES = ./desassembleur/desassembleur_main.c \
						./desassembleur/desassembleur.h \
						./desassembleur/desassembleur.c \
						./general.h \
						./verificateur.c \
						./verificateur.h

cw_SOURCES = 		./machine_virtuelle/machine_virtuelle.c \
						./machine_virtuelle/machine_virtuelle.h \
						./machine_virtuelle/graphique/element.h \
						./machine_virtuelle/graphique/graphique.h \
						./machine_virtuelle/graphique/element.c \
						./machine_virtuelle/graphique/graphique.c \
						./machine_virtuelle/listes.c \
						./machine_virtuelle/listes.h \
						./desassembleur/desassembleur.h \
						./desassembleur/desassembleur.c \
						./general.h \
						./graph.c \
						./graph.h \
						./verificateur.c \
						./verificateur.h
